2015-03-22  Benjamin Poulain  <benjamin@webkit.org>

        CSS Selectors: fix attribute case-insensitive matching of Contain and List
        https://bugs.webkit.org/show_bug.cgi?id=142932

        Reviewed by Darin Adler.

        Add tests for the new features and fix some existing tests using the 
        stringFromUTF8() utility recently added by Dhi.

        * TestWebKitAPI/Tests/WTF/StringImpl.cpp:
        (TestWebKitAPI::stringFromUTF8):
        * TestWebKitAPI/Tests/WTF/StringView.cpp:

2015-03-22  Michael Catanzaro  <mcatanzaro@igalia.com>

        [GTK] install-dependencies should install orc
        https://bugs.webkit.org/show_bug.cgi?id=142955

        Reviewed by Martin Robinson.

        Install orc, needed by openwebrtc

        * gtk/install-dependencies:

2015-03-22  Benjamin Poulain  <bpoulain@apple.com>

        Detect when url filter pattern with groups match the empty string
        https://bugs.webkit.org/show_bug.cgi?id=142930

        Reviewed by Sam Weinig.

        * TestWebKitAPI/Tests/WebCore/ContentExtensions.cpp:

2015-03-22  Anders Carlsson  <andersca@apple.com>

        _WKWebsiteDataStore should clear WebSQL databases
        https://bugs.webkit.org/show_bug.cgi?id=142947

        Reviewed by Sam Weinig.

        Add a variable that keeps track of the types of data we want to operate on, for easier debugging.

        * MiniBrowser/mac/WK2BrowserWindowController.m:
        (-[WK2BrowserWindowController fetchWebsiteData:]):
        (-[WK2BrowserWindowController fetchAndClearWebsiteData:]):
        (-[WK2BrowserWindowController clearWebsiteData:]):

2015-03-20  Mark Hahnenberg  <mhahnenb@gmail.com>

        GCTimer should know keep track of nested GC phases
        https://bugs.webkit.org/show_bug.cgi?id=142675

        Reviewed by Darin Adler.

        Adds a tool to aid in parsing the GC phase timing output into a
        tree-like structure based on the parent-child relationships
        of nested GC phases.
